// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gamedata verify particle usage should record both reports as readable documents 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "gamedata",
    "verify",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "cache": {
      "bytes": 52,
      "entries": 2,
      "hits": 2,
      "misses": 2,
      "refused": 0,
    },
    "checks": [
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "Every declared source opened",
        "verificationType": "coverage",
      },
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "No unreachable files",
        "verificationType": "collisions",
      },
      {
        "duration": "<duration>",
        "findings": [],
        "status": "passed",
        "summary": "1/1 particle references valid; 0/0 spawn files readable; 0 custom data sections unparsed",
        "verificationType": "particles-usage",
      },
    ],
    "duration": "<duration>",
    "skippedMounts": [],
    "status": "passed",
  },
}
`;

exports[`gamedata verify particle usage should record both reports as readable documents 2`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "gamedata",
    "verify",
  ],
  "duration": "<duration>",
  "error": "Check failed: 1 finding(s)",
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 3,
  "outcome": "checkFailed",
  "result": {
    "cache": {
      "bytes": 38,
      "entries": 2,
      "hits": 2,
      "misses": 2,
      "refused": 0,
    },
    "checks": [
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "Every declared source opened",
        "verificationType": "coverage",
      },
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "No unreachable files",
        "verificationType": "collisions",
      },
      {
        "duration": "<duration>",
        "findings": [
          {
            "assetPath": "configs/particles.ltx",
            "message": "Unknown particle reference: [sr_particle] name = missing_particle",
            "ruleId": "particles-usage.reference",
          },
        ],
        "status": "failed",
        "summary": "0/1 particle references valid; 0/0 spawn files readable; 0 custom data sections unparsed",
        "verificationType": "particles-usage",
      },
    ],
    "duration": "<duration>",
    "skippedMounts": [],
    "status": "failed",
  },
}
`;

exports[`gamedata verify particle usage should write the expected reports and files 1`] = `
[
  {
    "path": "missing.json",
    "sha256": "4314c3bffdf6d8c10d097d94c3d17a2547ab082f4f4e2d9fd50f25013945be53",
    "size": 1639,
  },
  {
    "path": "missing/configs/particles.ltx",
    "sha256": "19a0124a28179de5f90e61b8a3c5749a0c336b2936a61355861079514ecaabc0",
    "size": 38,
  },
  {
    "path": "missing/configs/system.ltx",
    "sha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "size": 0,
  },
  {
    "path": "missing/particles.xr",
    "sha256": "0786f7746df643a37b6420b652744270d1fdc15787740bad1c1c33b222a81037",
    "size": 1184775,
  },
  {
    "path": "valid.json",
    "sha256": "00960506feb5676761ca3ac13f9d2efa1c9404b6e96555b9ab9cbcb5639fc255",
    "size": 1386,
  },
  {
    "path": "valid/configs/particles.ltx",
    "sha256": "6c0778584957c0b8358146f220bf3523645103757c984b3dd6f5ec71df2bcc2b",
    "size": 52,
  },
  {
    "path": "valid/configs/system.ltx",
    "sha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "size": 0,
  },
  {
    "path": "valid/particles.xr",
    "sha256": "0786f7746df643a37b6420b652744270d1fdc15787740bad1c1c33b222a81037",
    "size": 1184775,
  },
]
`;
